# flashcard

./: .editorconfig  .env  .flake8  .gitattributes  .gitignore  README.md  babelnet_conf.yml  pyproject.toml  requirements.txt  temp.env
documents/: 20221129_research_pitch.pptx
scripts/: generator_web_app.py
src/crawler/: babelnet_crawler.py
src/generator/: concept_generator.py
src/web_app/: callbacks.py  layouts.py
