[project]
name = "flashcard"
description = "Generation and difficulty prediction of vocabulary flashcards"
version = "0.1.0"
authors = [
    { name = "Ludovic Amruthalingam", email = "ludovic.amruthalingam@hslu.ch"},
]

[tool.black]
include = '\.pyi?$'

[tool.isort]
profile = "black"
skip_gitignore=true

[tool.pytest.ini_options]
# Set true to see logger ouput in test command line window
log_cli = false
log_cli_level = "INFO"
log_cli_format = "%(time)s :: %(name)s :: %(message)s"
